Added home subview and master view

--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -1,1 +1,10 @@
-layout
+<!DOCTYPE html>
+<html>
+    <head>
+        <title><?= $title ?> | <?= $local_title ?></title>
+        <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css"/>
+    </head>
+        <body>
+            <?php include($local_view); ?>
+        </body>
+</html>
