--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+<head>
     <base href="/" />
-        <title><?= $title ?> | <?= $local_title ?></title>
+    <title><?= $title ?> | <?= $local_title ?></title>
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/core.css" />
-    </head>
+</head>
 
 <body class="d-flex flex-column">
     <div id="wrapper">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#"><?= $title ?><span class="text-muted"> | <?= $local_title ?></span></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBarToggler" aria-controls="navBarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navBarToggler">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                    <!-- I am not entirely sure if I want to include a search bar yet.
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                    -->
+                </div>
+            </div>
+        </nav>
 
         <main class="container">
             <?php include($local_view); ?>
@@ -25,6 +53,6 @@
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/popper.js"></script>
-        </body>
+</body>
 
 </html>
