Added a temporary home view
This local view includes an image of myself.

--- a/views/home.phtml
+++ b/views/home.phtml
@@ -1,1 +1,9 @@
-<h1><?= $local_title ?></h1>
+<div class="core-cont">
+    <h3 class="ml-2">Welcome!</h3>
+    <hr class="bg-dark" />
+    <div id="introduction">
+        <img class="mr-3 img-thumbnail img-responsive float-left" width="250px" height="250px" src="assets/img/me.PNG" alt="A picture of me" />
+        <p>Hello, my name is Jack Whelan and I'm currently in my final year studying Computer Science in Technological University Dublin (formerly DIT). I am broadly interested in Computer Science and am constantly learning about as many different areas as I can in order to maximise my usefulness and flexibility within teams.</p>
+        <h6>If you want to know a little bit more about me, take a look at the about me page linked in the navigation bar above.</h6>
+    </div>
+</div>
