--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -26,7 +26,7 @@
                             <a class="nav-link" href="/about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about">Curriculum Vitae</a>
+                            <a class="nav-link" href="/cv">Curriculum Vitae</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Test-Disabled</a>
