--- a/views/cv.phtml
+++ b/views/cv.phtml
@@ -1,1 +1,1 @@
-<embed src="assets/pdf/cv.pdf" type="application/pdf"/>
+<embed src="assets/pdf/cv.pdf" type="application/pdf" width="80%" height="800px"/>
