--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -26,6 +26,12 @@
                             <a class="nav-link" href="/about">About</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/projects">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/work">Work</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/cv">Curriculum Vitae</a>
                         </li>
                         <li class="nav-item">
