--- a/views/about.phtml
+++ b/views/about.phtml
@@ -1,1 +1,9 @@
-About page here
+<div class="core-cont">
+    <h3 class="ml-2">About Me</h3>
+    <hr class="bg-dark" />
+    <div id="introduction">
+        <img class="mr-3 img-thumbnail img-responsive float-left" width="250px" height="250px" src="assets/img/me.png" alt="A picture of me" />
+        <p>Hello, my name is Jack Whelan and I'm currently in my final year studying Computer Science in Technological University Dublin (formerly DIT). I am broadly interested in Computer Science and am constantly learning about as many different areas as I can in order to maximise my usefulness and flexibility within teams.</p>
+        <p>Lorem Ipsum</p>
+    </div>
+</div>
